# G4Workshop

./: CMakeLists.txt  README.md  sim.cc  vis.mac
CADModels/: CADModels.FCStd  Sphere.stl
inc/: actioninit.hh  detcon.hh  generator.hh  runaction.hh
src/: actioninit.cc  detcon.cc  generator.cc  runaction.cc
